--- a/index.html
+++ b/index.html
@@ -4,29 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-        Roboto:['Roboto', 'sans-serif']
-      },
-      colors:{
-      primary: "#f9d370"
-    }
-                }
-                
-            }
-        }
-    </script>
-      <style type="text/tailwindcss">
-        @layer utilities {
-          .content-auto {
-            content-visibility: auto;
-          }
-        }
-      </style>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -38,19 +16,19 @@
     <header>
         <nav class="  lg:px-16 md:px-10 px-8 flex justify-between items-center bg-primary py-4">
             <div class=" flex items-center gap-2">
-                <img src="./assets/image 5.png" class="" alt="">
+                <img src="../src/assets/image 5.png" class="" alt="">
                 <p class=" lg:text-[28px] md:text-[20px] text-[18px] font-bold font-Roboto">BRAND NAME</p>
             </div>
 
 
             <ul class=" gap-5 lg:flex md:flex hidden">
-                <li class="text-[16px] font-bold font-Roboto">HOME</li>
-                <li class="text-[16px] font-bold font-Roboto">STORE</li>
-                <li class="text-[16px] font-bold font-Roboto">ACCESSORIES</li>
-                <li class="text-[16px] font-bold font-Roboto">BRAND</li>
-                <li class="text-[16px] font-bold font-Roboto">PAGES</li>
-                <li class="text-[16px] font-bold font-Roboto">ABOUT US</li>
-                <li class="text-[16px] font-bold font-Roboto">NEWS</li>
+                <li class="text-[16px] font-bold font-Roboto cursor-pointer">HOME</li>
+                <li class="text-[16px] font-bold font-Roboto cursor-pointer">STORE</li>
+                <li class="text-[16px] font-bold font-Roboto cursor-pointer">ACCESSORIES</li>
+                <li class="text-[16px] font-bold font-Roboto cursor-pointer">BRAND</li>
+                <li class="text-[16px] font-bold font-Roboto cursor-pointer">PAGES</li>
+                <li class="text-[16px] font-bold font-Roboto cursor-pointer">ABOUT US</li>
+                <li class="text-[16px] font-bold font-Roboto cursor-pointer">NEWS</li>
             </ul>
 
             <div class="lg:block md:block hidden">
@@ -89,9 +67,11 @@
                 <button class="bg-[#4C8787]  w-[124px] h-[50px] text-[#fff]">VIEW NOW</button>
             </div>
         </div>
+        <div>
 
+        </div>
         <div
-            class="lg:px-16 md:px-10 px-8  justify-center py-10 lg:gap-0 md:gap-0 gap-5 lg:flex md:grid grid items-center ">
+            class="lg:px-16 md:px-10 px-8  justify-center  py-10 lg:gap-0 md:gap-0 gap-5 lg:flex md:grid grid items-center ">
             <div class="lg:w-1/2 md:w-full w-full lg:flex md:grid grid items-center justify-center">
                 <img class="w-[283px] h-[283px]" src="./assets/image 3.png" alt="">
                 <div class="grid gap-12">
@@ -110,6 +90,265 @@
 
             </div>
 
+        </div>
+        <div class="grid justify-center items-center">
+            <div
+                class="lg:px-16 md:px-10 px-8 grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-9 justify-center items-center">
+                <div class="w-[300px] h-[510px] bg-no-repeat bg-cover"
+                    style="background-image: url(./assets/Rectangle\ 5.png) ;">
+                    <div class="bg-[#000] opacity-30 h-full grid justify-center items-center px-5">
+                        <div class="grid gap-10">
+                            <div class="grid gap-5">
+                                <p class="text-[28px] font-Roboto font-bold text-[#fff]">DECOR</p>
+                                <p class="text-[#fff]">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Necessitatibus
+                                    autem placeat sequi
+                                    debitis delectus consequatur impedit voluptas dolorum reiciendis eaque.</p>
+
+                            </div>
+
+                            <button class="bg-[#4C8787]  w-[124px] h-[50px] text-[#fff]">VIEW DETAILS </button>
+
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+                <div class="">
+
+                    <img class="w-[306px] h-[422px]" src="./assets/Rectangle 6.png" alt="">
+
+                    <div class="grid gap-3">
+                        <p class="font-Roboto font-bold mt-3 ">Linen Beach Towel</p>
+                        <img class="w-[90.4px] h-[16px]" src="./assets/Group 10 (1).png" alt="">
+                        <p class="font-Roboto font-bold">30$</p>
+                    </div>
+                </div>
+
+                <div class="">
+
+                    <img class="w-[306px] h-[422px]" src="./assets/Group 232.png" alt="">
+
+                    <div class="grid gap-3">
+                        <p class="font-Roboto font-bold mt-3 ">Super Clear Glass Box</p>
+                        <img class="w-[90.4px] h-[16px]" src="./assets/Group 10.png" alt="">
+                        <p class="font-Roboto font-bold">30$</p>
+                    </div>
+                </div>
+                <div class="">
+
+                    <img class="w-[306px] h-[422px]" src="./assets/Rectangle 8.png" alt="">
+
+                    <div class="grid gap-3">
+                        <p class="font-Roboto font-bold mt-3">4-pack Small Ceramic Plates
+
+
+                        </p>
+                        <img class="w-[90.4px] h-[16px]" src="./assets/Group 10.png" alt="">
+                        <p class="font-Roboto font-bold">30$</p>
+                    </div>
+                </div>
+                <div class="">
+
+                    <img class="w-[306px] h-[422px]" src="./assets/Rectangle 10.png" alt="">
+
+                    <div class="grid gap-3">
+                        <p class="font-Roboto font-bold mt-3 ">Large Clear Glass Box</p>
+                        <img class="w-[90.4px] h-[16px]" src="./assets/Group 10.png" alt="">
+                        <p class="font-Roboto font-bold">30$</p>
+                    </div>
+                </div>
+                <div class="">
+
+                    <img class="w-[306px] h-[422px]" src="./assets/Rectangle 11.png" alt="">
+
+                    <div class="grid gap-3">
+                        <p class="font-Roboto font-bold mt-3 ">Round jute Placemat</p>
+                        <img class="w-[90.4px] h-[16px]" src="./assets/Group 10.png" alt="">
+                        <p class="font-Roboto font-bold">30$</p>
+                    </div>
+                </div>
+                <div class="">
+
+                    <img class="w-[306px] h-[422px]" src="./assets/Rectangle 12.png" alt="">
+
+                    <div class="grid gap-3">
+                        <p class="font-Roboto font-bold mt-3">Metal Wire Basket</p>
+                        <img class="w-[90.4px] h-[16px]" src="./assets/Group 10.png" alt="">
+                        <p class="font-Roboto font-bold">30$</p>
+                    </div>
+                </div>
+
+                <div class="w-[300px] h-[510px] bg-no-repeat lg:bg-cover md:bg-contain bg-contain"
+                    style="background-image: url(./assets/Rectangle\ 9.png) ;">
+                    <div class="bg-[#000] opacity-30 h-full grid justify-center items-center px-5">
+                        <div class="grid gap-10">
+                            <div class="grid gap-5">
+                                <p class="text-[28px] font-Roboto font-bold text-[#fff]">DECOR</p>
+                                <p class="text-[#fff]">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Necessitatibus
+                                    autem placeat sequi
+                                    debitis delectus consequatur impedit voluptas dolorum reiciendis eaque.</p>
+
+                            </div>
+
+                            <button class="bg-[transparent] border-[#fff] border-2 w-[124px] h-[50px] text-[#fff]">VIEW
+                                DETAILS </button>
+
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class=" pt-10">
+            <div class="h-[510px] bg-no-repeat bg-cover flex pl-14 items-center"
+                style="background-image: url(./assets/Rectangle\ 13.png);">
+                <div
+                    class="grid gap-4 bg-primary opacity-80 lg:w-[545px] md:w-[445px] w-[245px] h-[338px] justify-center items-center px-12">
+
+                    <p class="text-[28px] font-Roboto font-bold text-[#323334]">BEDSHEET SETS</p>
+                    <div class="flex gap-5">
+
+                        <p class="font-Roboto font-bold text-[#7b5136] text-[28px]">50$</p>
+                        <s class="font-Roboto font-bold text-[#323334] text-[28px] ">$220.00</s>
+                    </div>
+
+
+
+                    <p class="font-Roboto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius natus
+                        reiciendis fugiat?</p>
+                    <button class="bg-[#4C8787]  w-[124px] h-[50px] text-[#fff]">VIEW DETAILS </button>
+
+                </div>
+            </div>
+        </div>
+        <div class="lg:px-16 md:px-10 px-8 pt-10">
+            <div class="">
+                <p class="text-[34px] font-bold font-Roboto py-10">TOP RATING</p>
+                <div class="grid justify-center items-center">
+                    <div class="grid lg:grid-cols-3 md:grid-cols-1 grid-cols-1 gap-12 justify-center items-center">
+
+                        <div class=" flex bg-[#fff] w-[416px] h-[308px]  ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 26.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold ">Tray <br> with Foot</p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+
+                        <div class="flex w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 27.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold ">Twill <br> Seat Cushion</p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+
+                        <div class="flex  w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 28.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold ">Fluted Beverage <br> Glass</p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+
+                        <div class="flex  w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 29.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold ">Ceramic<br> Egg Cup</p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+                        <div class="flex  w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 33.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold "> Small <br>Bamboo Box </p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+                        <div class="flex  w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 34.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold "> Metal Cutlery <br>Basket </p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+                        <div class="flex  w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 30.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold "> 4-pack Ceramic <br> Cups </p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+                        <div class="flex  w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 31.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold "> 2-pack Linen <br> Napkins </p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+                        </div>
+                        <div class="flex  w-[416px] h-[308px] ">
+                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 32.png" alt="">
+                            <div class="  space-y-4  p-16">
+                                <p class="font-Roboto font-bold "> Glazed Stoneware <br> Plates </p>
+                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <p class="font-Roboto font-bold">30$</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="flex justify-center items-center mt-10">
+            <button class="bg-[#4C8787]  w-[273px] h-[51px] text-[#fff] "> LOAD MORE </button>
+
+        </div>
+        <div
+            class="lg:px-16 md:px-10 px-8 pt-10 lg:flex md:grid md:justify-center grid items-center  lg:justify-between space-y-6">
+            <div>
+                <p class="font-Roboto font-bold text-2xl">SIGN UP FOR OUR NEWSLETTER</p>
+                <p class="font-Roboto">Subscribe for the lastest deals and promotions</p>
+            </div>
+            <div class="flex items-center">
+                <input
+                    class="lg:w-[400px] md:w-[400px] w-[250px] h-[50px] bg-[#f3f6ff] border-[#000] border-2 placeholder:px-3"
+                    type="email" name="" id="" placeholder="Enter your e-mail address">
+                <div class="bg-[#4C8787] w-[85px] h-[50px] rounded-sm grid justify-center">
+                    <button>
+                        <img class="w-[21px] h-[15.5px]" src="./assets/Vector.png" alt="">
+                    </button>
+                </div>
+
+            </div>
+        </div>
+        <div class="mt-9">
+            <div class="bg-[#000] ">
+                <div>
+                    <p class="text-[28px] font-Roboto font-bold text-[#fff]">BRAND NAME</p>
+                    <p class="font-Roboto font-bold text-[#fff] text-opacity-30">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Rem placeat aliquam praesentium.</p>
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
     </header>
 </body>
