--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        Roboto: ['Roboto', 'sans-serif']
+                    }
+
+                }
+            colors: {
+                    primary: "#f9d370"
+                }
+            },
+        }
+    </script>
+      <style type="text/tailwindcss">
+        @layer utilities {
+          .content-auto {
+            content-visibility: auto;
+          }
+        }
+      </style>
+      
 
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -344,7 +368,8 @@
             <div class="bg-[#000] ">
                 <div>
                     <p class="text-[28px] font-Roboto font-bold text-[#fff]">BRAND NAME</p>
-                    <p class="font-Roboto font-bold text-[#fff] text-opacity-30">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Rem placeat aliquam praesentium.</p>
+                    <p class="font-Roboto font-bold text-[#fff] text-opacity-30">Lorem ipsum dolor sit amet consectetur
+                        <br> adipisicing elit. Rem placeat aliquam praesentium.</p>
                 </div>
                 <div></div>
                 <div></div>
