--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
                 extend: {
                     fontFamily: {
                         Roboto: ['Roboto', 'sans-serif']
+                    },
+                    colors: {
+                        primary: "#f9d370"
                     }
+                },
 
-                }
-            colors: {
-                    primary: "#f9d370"
-                }
             },
         }
     </script>
-      <style type="text/tailwindcss">
+    <style type="text/tailwindcss">
         @layer utilities {
           .content-auto {
             content-visibility: auto;
           }
         }
       </style>
-      
+
 
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -369,7 +369,8 @@
                 <div>
                     <p class="text-[28px] font-Roboto font-bold text-[#fff]">BRAND NAME</p>
                     <p class="font-Roboto font-bold text-[#fff] text-opacity-30">Lorem ipsum dolor sit amet consectetur
-                        <br> adipisicing elit. Rem placeat aliquam praesentium.</p>
+                        <br> adipisicing elit. Rem placeat aliquam praesentium.
+                    </p>
                 </div>
                 <div></div>
                 <div></div>
