--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 
+
 <body class="bg-[#f3f6ff]">
     <header>
         <nav class="  lg:px-16 md:px-10 px-8 flex justify-between items-center bg-primary py-4">
@@ -62,9 +63,9 @@
                     US</button>
             </div>
             <div class="lg:hidden md:hidden flex gap-3">
-                <img src="./assets/Group 41.png " class="w-[34px] h-[27px]" alt="">
-                <img src="./assets/image 7.png" class="w-[34px] h-[27px]" alt="">
-                <img src="./assets/Group 225.png" class="w-[34px] h-[27px]" alt="">
+                <img src="../src/assets/Group 41.png " class="w-[34px]" alt="">
+                <img src="./assets/image 7.png" class="w-[34px] " alt="">
+                <img src="./assets/Group 225.png" class="w-[34px] " alt="">
             </div>
         </nav>
         <div class="lg:px-16 md:px-10 px-8 flex justify-center items-center py-5 ">
@@ -257,78 +258,81 @@
         <div class="lg:px-16 md:px-10 px-8 pt-10">
             <div class="">
                 <p class="text-[34px] font-bold font-Roboto py-10">TOP RATING</p>
-                <div class="grid justify-center items-center">
+                <div class="grid lg:justify-center md:justify-center  items-center">
                     <div class="grid lg:grid-cols-3 md:grid-cols-1 grid-cols-1 gap-12 justify-center items-center">
 
-                        <div class=" flex bg-[#fff] w-[416px] h-[308px]  ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 26.png" alt="">
+                        <div class=" flex bg-[#fff] lg:w-[416px] md:w-[416px] w-[316px]  h-[308px]  ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px] h-[308px]" src="./assets/Rectangle 26.png"
+                                alt="">
                             <div class="  space-y-4  p-16">
-                                <p class="font-Roboto font-bold ">Tray <br> with Foot</p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <p class="font-Roboto font-bold ">Tray with Foot</p>
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
 
-                        <div class="flex w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 27.png" alt="">
+                        <div class="flex lg:w-[416px] md:w-[416px] w-[200px] h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px] h-[308px]" src="./assets/Rectangle 27.png"
+                                alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold ">Twill <br> Seat Cushion</p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
 
-                        <div class="flex  w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 28.png" alt="">
+                        <div class="flex lg:w-[416px] md:w-[416px] w-[200px] h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px]" src="./assets/Rectangle 28.png" alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold ">Fluted Beverage <br> Glass</p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
 
-                        <div class="flex  w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 29.png" alt="">
+                        <div class="flex lg:w-[416px] md:w-[416px] w-[200px] h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px]" src="./assets/Rectangle 29.png" alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold ">Ceramic<br> Egg Cup</p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
-                        <div class="flex  w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 33.png" alt="">
+                        <div class="flex lg:w-[416px] md:w-[416px] w-[200px] h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px]" src="./assets/Rectangle 33.png" alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold "> Small <br>Bamboo Box </p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
-                        <div class="flex  w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 34.png" alt="">
+                        <div class="flex lg:w-[416px] md:w-[416px] w-[200px]  h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px]" src="./assets/Rectangle 34.png" alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold "> Metal Cutlery <br>Basket </p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
-                        <div class="flex  w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 30.png" alt="">
+                        <div class="flex  lg:w-[416px] md:w-[416px] w-[200px] h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px]" src="./assets/Rectangle 30.png" alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold "> 4-pack Ceramic <br> Cups </p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10 (1).png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
-                        <div class="flex  w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 31.png" alt="">
+                        <div class="flex lg:w-[416px] md:w-[416px] w-[200px] h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px]" src="./assets/Rectangle 31.png" alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold "> 2-pack Linen <br> Napkins </p>
-                                <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
+                                <img class="w-[150.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
                                 <p class="font-Roboto font-bold">30$</p>
                             </div>
                         </div>
-                        <div class="flex  w-[416px] h-[308px] ">
-                            <img class="w-[198px] h-[308px]" src="./assets/Rectangle 32.png" alt="">
+                        <div class="flex lg:w-[416px] md:w-[416px] w-[200px] h-[308px] ">
+                            <img class="lg:w-[198px] md:w-[198px] w-[158px] h-[308px]" src="./assets/Rectangle 32.png"
+                                alt="">
                             <div class="  space-y-4  p-16">
                                 <p class="font-Roboto font-bold "> Glazed Stoneware <br> Plates </p>
                                 <img class="w-[90.4px] h-[15.07px]" src="./assets/Group 10.png" alt="">
@@ -365,19 +369,53 @@
             </div>
         </div>
         <div class="mt-9">
-            <div class="bg-[#000] ">
-                <div>
+            <div class="bg-[#000] lg:px-16 md:px-10 px-8 grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-9 ">
+                <div class=" grid gap-5">
                     <p class="text-[28px] font-Roboto font-bold text-[#fff]">BRAND NAME</p>
                     <p class="font-Roboto font-bold text-[#fff] text-opacity-30">Lorem ipsum dolor sit amet consectetur
-                        <br> adipisicing elit. Rem placeat aliquam praesentium.
-                    </p>
+                        <br> adipisicing elit. Rem placeat aliquam praesentium.</p>
+                    <p class="font-Roboto font-bold text-[#fff]"> 121 king street, Melbourne 3000 <br>
+                        +12 3 0000 0000 <br>
+                        contact@brandemail.com</p>
+                    <div class="flex justify-between items-center">
+                        <img class="w-[19.93px] h-[19.87px]" src="./assets/Vector (1).png" alt="">
+                        <img class="w-[19.93px] h-[19.87px]" src="./assets/ant-design_twitter-outlined.png" alt="">
+                        <img class="w-[19.93px] h-[19.87px]" src="./assets/ant-design_instagram-filled.png" alt="">
+                        <img class="w-[19.93px] h-[19.87px]" src="./assets/vaadin_youtube.png" alt="">
+                    </div>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="grid gap-4">
+                    <p class="font-Roboto font-bold text-[#fff] text-[16px] ">SHOPPING </p>
+                    <p class="font-Roboto text-[#fff] font-light">Your cart <br>
+                        Your orders <br>
+                        Compared items <br>
+                        Wishlist items <br>
+                        Shipping detail </p>
+                </div>
+                <div class="grid gap-4">
+                    <p class="font-Roboto font-bold text-[#fff] text-[16px] ">MORE LINK </p>
+                    <p class="font-Roboto text-[#fff] font-light">Blog br
+                        Gift Center <br>
+                        Buying Guides <br>
+                        New Arrivals <br>
+                        Clearance</p>
+                </div>
+                <div>
+                    <div class="grid gap-4">
+                        <p class="font-Roboto font-bold text-[#fff] text-[16px]"> PROMO UPDATE</p>
+                        <p  class="font-Roboto font-bold text-[#fff] text-opacity-30">14 May <br>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                         3 comments</p>
+                    </div>
+                    <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-00">
+                    <div>
+                        <p class="font-Roboto font-bold text-[#fff] text-opacity-30" > 15 July <br>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                            3 comments</p>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 </body>
-
 </html>
