--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <ul class=" gap-5 lg:flex md:flex hidden">
                 <li class="text-[16px] font-bold font-Roboto cursor-pointer">HOME</li>
-                <li class="text-[16px] font-bold font-Roboto cursor-pointer">STORE</li>
+                <li onclick="storeInput()" class="text-[16px] font-bold font-Roboto cursor-pointer">STORE</li>
                 <li class="text-[16px] font-bold font-Roboto cursor-pointer">ACCESSORIES</li>
                 <li class="text-[16px] font-bold font-Roboto cursor-pointer">BRAND</li>
                 <li class="text-[16px] font-bold font-Roboto cursor-pointer">PAGES</li>
@@ -418,4 +418,6 @@
         </div>
     </header>
 </body>
+
+<script src="./furniture.js"></script>
 </html>
